fix link to videos and name of qcow2 disk in vm.conf

--- a/templates/vm.conf.j2
+++ b/templates/vm.conf.j2
@@ -27,6 +27,6 @@ vm current {
 	memory {{ vm01_ram }}
 	owner {{ vmm_user }}
 	cdrom $sets install72.iso
-	disk {{ vmm_dir }}/signal.qcow2
+	disk {{ vmm_dir }}/current.qcow2
 	interface tap { switch "veb0" }
 }
